データ分析一部開始

--- a/get_stock_price_history_from_investing_com.ipynb
+++ b/get_stock_price_history_from_investing_com.ipynb
@@ -2628,7 +2628,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_save.to_csv(\"./output/s_and_p_stock_price_history_from_investing_com.csv\")"
+    "df_save.to_csv(\"./output/s_and_p_stock_price_history_from_investing_com.csv\", index=False)"
    ]
   },
   {
