--- a/merge_stock_price_history_data.ipynb
+++ b/merge_stock_price_history_data.ipynb
@@ -1795,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -1804,7 +1804,7 @@
        "(3664240, 7)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1855,7 +1855,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1867,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1876,7 +1876,7 @@
        "480"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1928,12 +1928,12 @@
        "</div>"
       ],
       "text/plain": [
-       "           date\n",
-       "min  1970-01-02\n",
-       "max  2020-09-30"
+       "          date\n",
+       "min 1970-01-02\n",
+       "max 2020-09-30"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5184,12 +5184,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 日付をdatetime型に変換"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_merged_unique.to_csv(\"./output/s_and_p_stock_price_history.csv\")"
+    "df_merged_unique[\"date\"] = pd.to_datetime(df_merged_unique[\"date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_merged_unique.to_csv(\"./output/s_and_p_stock_price_history.csv\", index=False)"
    ]
   },
   {
